logs/stomp_moveit/build.make.081.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/cost_functions/experiment_check.cpp: In member function ‘virtual bool stomp_moveit::cost_functions::ExperimentCheck::computeCosts(const MatrixXd&, std::size_t, std::size_t, int, int, Eigen::VectorXd&, bool&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/cost_functions/experiment_check.cpp:259:38: error: ‘paramters’ was not declared in this scope
       if(parameters.col(t).row(6) != paramters.col(t-1).row(6))
                                      ^~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/cost_functions/experiment_check.cpp:259:38: note: suggested alternative: ‘parameters’
       if(parameters.col(t).row(6) != paramters.col(t-1).row(6))
                                      ^~~~~~~~~
                                      parameters
make[2]: *** [CMakeFiles/stomp_moveit_cost_functions.dir/src/cost_functions/experiment_check.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit_cost_functions.dir/all] Error 2
make: *** [all] Error 2
